<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:clickable="false"
    tools:context="com.ui.MainActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/sf_pro_display_semibold"
        android:gravity="center"
        android:text="@string/search_cheap"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="#2F3035"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="#3E3F43"
            app:cardCornerRadius="12dp"
            app:cardElevation="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <EditText
                    android:id="@+id/departure"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/departure_hint"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textColorHint="#9F9F9F"
                    app:layout_constraintBottom_toTopOf="@id/divider_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/search_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/search_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/divider_view"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:background="#5E5F61"
                    app:layout_constraintBottom_toTopOf="@+id/arrival"
                    app:layout_constraintEnd_toEndOf="@+id/departure"
                    app:layout_constraintStart_toStartOf="@+id/departure"
                    app:layout_constraintTop_toBottomOf="@+id/departure" />

                <EditText
                    android:id="@+id/arrival"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:allowClickWhenDisabled="false"
                    android:background="@android:color/transparent"
                    android:hint="@string/arrival_hint"
                    android:textColor="@color/white"
                    android:textColorHint="#9F9F9F"
                    app:layout_constraintEnd_toEndOf="@id/divider_view"
                    app:layout_constraintStart_toStartOf="@id/divider_view"
                    app:layout_constraintTop_toBottomOf="@id/divider_view" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/recommendations_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/sf_pro_display_semibold"
        android:gravity="center"
        android:text="@string/recommendations_title"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@+id/card_container"
        app:layout_constraintTop_toBottomOf="@id/card_container" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_offers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recommendations_title"
        tools:listitem="@layout/offers_item" />

</androidx.constraintlayout.widget.ConstraintLayout>