<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/bottom_sheet"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0C0C0C"
    android:padding="15dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardElevation="20dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#3E3F43"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/difficult_route_button">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:id="@+id/departure"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/departure_hint"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="#9F9F9F"
                android:drawableLeft="@drawable/airplane_grey"
                android:drawablePadding="10dp"
                android:background="@android:color/transparent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/divider_view"/>

            <View
                android:id="@+id/divider_view"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:background="#5E5F61"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="@+id/departure"
                app:layout_constraintStart_toStartOf="@+id/departure"
                app:layout_constraintTop_toBottomOf="@+id/departure"
                app:layout_constraintBottom_toTopOf="@+id/til_arrival" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_arrival"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="@id/divider_view"
                app:layout_constraintStart_toStartOf="@id/divider_view"
                app:layout_constraintTop_toBottomOf="@id/divider_view" >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/arrival"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/search_icon"
                    android:drawablePadding="10dp"
                    android:hint="@string/arrival_hint"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textColorHint="#9F9F9F" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/difficult_route_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/round_corner"
        android:backgroundTint="@color/dark_green"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="center"
        android:src="@drawable/difficult_route"
        app:layout_constraintStart_toStartOf="@+id/card_search"
        app:layout_constraintTop_toBottomOf="@+id/card_search" />

    <TextView
        android:id="@+id/tv_difficult_route"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Сложный\nмаршрут"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/difficult_route_button"
        app:layout_constraintStart_toStartOf="@+id/difficult_route_button"
        app:layout_constraintEnd_toEndOf="@+id/difficult_route_button"
        android:layout_marginTop="4dp"/>

    <ImageButton
        android:id="@+id/anywhere_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/blue"
        android:background="@drawable/round_corner"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="center"
        android:src="@drawable/anywhere"
        app:layout_constraintStart_toEndOf="@id/difficult_route_button"
        app:layout_constraintTop_toBottomOf="@+id/card_search"
        app:cardCornerRadius="12dp"/>

    <TextView
        android:id="@+id/tv_anywhere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anywhere"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/anywhere_button"
        app:layout_constraintStart_toStartOf="@+id/anywhere_button"
        app:layout_constraintEnd_toEndOf="@+id/anywhere_button"
        android:layout_marginTop="4dp"/>

    <ImageButton
        android:id="@+id/weekends_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/dark_blue"
        android:background="@drawable/round_corner"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="center"
        android:src="@drawable/weekends"
        app:layout_constraintStart_toEndOf="@id/anywhere_button"
        app:layout_constraintTop_toBottomOf="@+id/card_search"
        app:cardCornerRadius="12dp"/>

    <TextView
        android:id="@+id/tv_weekends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Выходные"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/weekends_button"
        app:layout_constraintStart_toStartOf="@+id/weekends_button"
        app:layout_constraintEnd_toEndOf="@+id/weekends_button"
        android:layout_marginTop="4dp"/>

    <ImageButton
        android:id="@+id/hot_tickets_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/red"
        android:layout_marginEnd="15dp"
        android:background="@drawable/round_corner"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="center"
        android:src="@drawable/hot_tickets"
        app:layout_constraintTop_toBottomOf="@+id/card_search"
        app:layout_constraintEnd_toEndOf="@+id/card_search"
        app:cardCornerRadius="12dp"/>

    <TextView
        android:id="@+id/tv_hot_tickets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Горячие\nбилеты"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/hot_tickets_button"
        app:layout_constraintStart_toStartOf="@+id/hot_tickets_button"
        app:layout_constraintEnd_toEndOf="@+id/hot_tickets_button"
        android:layout_marginTop="4dp"/>

    <TextView
        android:id="@+id/recommendations_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Популярные направления"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/tv_hot_tickets"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/popular_destinations_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#333"
        app:layout_constraintTop_toBottomOf="@+id/recommendations_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/istanbul_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="0dp"
                android:backgroundTint="#3E3F43"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/iv_istanbul"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/istanbul"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_istanbul"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/istanbul_name"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintStart_toEndOf="@id/iv_istanbul"
                        app:layout_constraintTop_toTopOf="@+id/iv_istanbul" />

                    <TextView
                        android:id="@+id/tv_istanbul_subtitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/popular_destination"
                        android:textColor="@color/gray1"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="@id/tv_istanbul"
                        app:layout_constraintTop_toBottomOf="@id/tv_istanbul" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <View
                android:id="@+id/istanbul_sochi_divider"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:background="#5E5F61"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintTop_toBottomOf="@+id/istanbul_card"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/sochi_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="0dp"
                android:backgroundTint="#3E3F43"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/istanbul_sochi_divider"
                app:layout_constraintStart_toStartOf="@+id/istanbul_card">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/iv_sochi"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/sochi"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_sochi"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/sochi_name"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintStart_toEndOf="@id/iv_sochi"
                        app:layout_constraintTop_toTopOf="@+id/iv_sochi" />

                    <TextView
                        android:id="@+id/tv_sochi_subtitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/popular_destination"
                        android:textColor="@color/gray1"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="@id/iv_sochi"
                        app:layout_constraintStart_toStartOf="@id/tv_sochi"
                        app:layout_constraintTop_toBottomOf="@id/tv_sochi" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <View
                android:id="@+id/sochi_phuket_divider"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:background="#5E5F61"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintTop_toBottomOf="@+id/sochi_card"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/phuket_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="0dp"
                android:backgroundTint="#3E3F43"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/sochi_phuket_divider">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/iv_phuket"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/phuket"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginEnd="8dp"/>

                    <TextView
                        android:id="@+id/tv_phuket"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/phuket_name"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:layout_marginStart="10dp"
                        app:layout_constraintTop_toTopOf="@+id/iv_phuket"
                        app:layout_constraintStart_toEndOf="@id/iv_phuket"/>

                    <TextView
                        android:id="@+id/tv_phuket_subtitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/popular_destination"
                        android:textColor="@color/gray1"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="@id/tv_phuket"
                        app:layout_constraintTop_toBottomOf="@id/tv_phuket"
                        app:layout_constraintBottom_toBottomOf="@id/iv_phuket"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
